--- a/.gitattributes
+++ b/.gitattributes
@@ -5,5 +5,6 @@ graphs/days.html -text
 graphs/hours.html -text
 graphs/minutes.html -text
 graphs/style.css -text
+graphs/weeks.html -text
 /powermeterd -text
 /update-graphs -text
