[powermeter] Wasting time with graphs...

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,9 +2,21 @@
 /can.py -text
 /create-rrd -text
 /graph.cgi -text
+graphs/can-days.html -text
+graphs/can-hours.html -text
+graphs/can-minutes.html -text
+graphs/can-weeks.html -text
+graphs/cool.css -text
+graphs/cool.html -text
 graphs/days.html -text
 graphs/hours.html -text
+graphs/machines-days.html -text
+graphs/machines-hours.html -text
+graphs/machines-minutes.html -text
+graphs/machines-months.html -text
+graphs/machines-weeks.html -text
 graphs/minutes.html -text
+graphs/months.html -text
 graphs/style.css -text
 graphs/weeks.html -text
 /powermeterd -text
