--- a/.gitattributes
+++ b/.gitattributes
@@ -8,16 +8,16 @@ graphs/can-minutes.html -text
 graphs/can-weeks.html -text
 graphs/cool.css -text
 graphs/cool.html -text
-graphs/days.html -text
-graphs/hours.html -text
 graphs/machines-days.html -text
 graphs/machines-hours.html -text
 graphs/machines-minutes.html -text
 graphs/machines-months.html -text
 graphs/machines-weeks.html -text
-graphs/minutes.html -text
-graphs/months.html -text
+graphs/power-days.html -text
+graphs/power-hours.html -text
+graphs/power-minutes.html -text
+graphs/power-months.html -text
+graphs/power-weeks.html -text
 graphs/style.css -text
-graphs/weeks.html -text
 /powermeterd -text
 /update-graphs -text
