[powermeterd] Various graph updates

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 graphs/can-days.html -text
 graphs/can-hours.html -text
 graphs/can-minutes.html -text
+graphs/can-months.html -text
 graphs/can-weeks.html -text
 graphs/cool.css -text
 graphs/cool.html -text
